[package]
name = "joinoperator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3 # Optional: Optimize for benchmarking during development builds

[profile.release]
debug = true # Optional: Include debug information in release builds for better diagnostics
